--- a/src/styles/components/app.css
+++ b/src/styles/components/app.css
@@ -1,16 +1,22 @@
+#root {
+  display: grid;
+  justify-content: center;
+  width: 100vw;
+}
+
 .App {
   display: grid;
   grid-template-rows: min-content 1fr;
   padding: var(--space-medium);
-  width: 100%;
-  margin: 0 auto;
+  width: 100vw;
 }
 
 .main-container {
   display: grid;
   grid-template-rows: repeat(3, min-content);
-  justify-content: center;
+  justify-content: stretch;
   justify-items: center;
+  width: 100%;
 }
 
 @media (min-width: 600px) {
