--- a/src/styles/components/sortableList.css
+++ b/src/styles/components/sortableList.css
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-rows: repeat(3, min-content);
   justify-items: center;
-  width: 280px;
+  width: 100%;
 }
 
 .sort-options {
